--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -6,19 +6,28 @@
     <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">
-    <link rel="stylesheet" href="styles/4-filters.css">
     <link rel="stylesheet" href="styles/4-common.css">
+    <link rel="stylesheet" href="styles/5-filters.css">
 </head>
 <body>
     <header>
-        <div class="logo">
-        </div>
+        <div class="logo"></div>
     </header>
     <div class="container">
         <section class="filters">
             <button type="button">Search</button>
+            <div class="locations">
+                <h3>States</h3>
+                <h4>EX:Arizona,california...</h4>
+            </div>
+            <div class=" Amenities ">
+                <h3>Amenities</h3>
+                <h4>EX: Internet, Kitchen...</h4>
+            </div>
         </section>
     </div>
-    <footer>Best School</footer>
+    <footer>
+        Best School
+    </footer>
 </body>
 </html>
